--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "prebuild": "rm -rf node_modules/.cache",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
