--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,8 @@ services:
     ports:
       - "8090:8090"
     volumes:
-      - pocketbase_data:/pb_data
-      - pocketbase_public:/pb_public
-      - pb_migrations:/pb_migrations
+      - ./pocketbase_data:/pb/pb_data
+      - ./pb_migrations:/pb/pb_migrations
     command: --migrationsDir=/pb_migrations --automigrate # Enable auto migrations
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8090/api/health || exit 1
@@ -37,11 +36,6 @@ services:
       - VITE_POCKETBASE_URL=http://pocketbase:8090
     networks:
       - app-network
-
-volumes:
-  pocketbase_data:
-  pocketbase_public:
-  pb_migrations:
 
 networks:
   app-network:
